# xll_rust

./: Cargo.toml
src/: excel_wrappers.rs  lib.rs
src/actuarial/: mod.rs  option_pricing.rs
xladd-core/: Cargo.toml
xladd-core/src/: entrypoint - Copy.origin  entrypoint.rs  lib.rs  registrator.rs  variant.rs  xlauto.rs  xlcall.rs
xladd-derive/: Cargo.toml
xladd-derive/src/: lib.rs
