[package]
authors = ["Gary Velcich"]
name = "xladd-derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
# com = { version = "0.6.0", features = ["production"] }
proc-macro2 = "1"
quote = "1"
syn = { version = "2.0.104", features = ["full", "extra-traits"] }
# widestring = "1.2.0"
# winapi = {version = "0.3", features = ["oaidl", "combaseapi", "oleauto"]}
xladd-core = { path = "../xladd-core" }